src/objects/TTS_Access__c.object
<CustomObject>
    <description>access control to type and sub type from profile and role</description>
    <fields>
        <fullName>Except_To_Profiles__c</fullName>
        <label>Except To Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET EB Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM Back Office Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research User</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Except_To_Roles__c</fullName>
        <label>Except To Roles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSO Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSS Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET DCSM Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Rapid Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Rework</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Limit_To_Profiles__c</fullName>
        <label>Limit To Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET EB Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM Back Office Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Limit_To_Roles__c</fullName>
        <label>Limit To Roles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSO Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSS Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET DCSM Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Rapid Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Rework</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>Subtype</globalPicklist>
        <inlineHelpText>Leave blank if value access is controlled by the Type value</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <label>TTS Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Limit_To_Profiles__c</columns>
        <columns>Except_To_Profiles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TTSA-{000000000}</displayFormat>
        <label>TTSA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTS Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>